--- a/ImageFilters/ImageFiltersUITests/Info.plist
+++ b/ImageFilters/ImageFiltersUITests/Info.plist
@@ -16,6 +16,8 @@
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>We want to save the filtered photo</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 </dict>
